# site-sentinel

./: .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt  site_sentinel.yaml
.github/workflows/: ci.yml  lint.yml  test.yml
.streamlit/: config.toml  secrets.toml.example
configs/: app.yaml  model_training.yaml  pipeline.yaml
docs/: architecture.md
notebooks/: 2_event_analyzer.py  2c_vhelper.py  2d_extract_coords.py  3b_feature_eng_for_demo.py  3c_feature_eng_for_demo_restore.py  6x_render_video_old.py  README.md  explore_concords.py  extract_top_clips.py
pipeline/: 01_find_events.py  02_build_dataset.py  03a_train_xgboost.py  03b_train_lstm.py  03c_train_tcn.py  04_train_random_forest.py  05_calibrate_camera.py  06_render_video.py  __init__.py
scripts/: 1_data_parser.py  2b_find_best_dynamic_event.py  3_feature_eng.py  4a_train_xgboost.py  4b_train_lstm.py  4c_train_tcn.py  4d_train_randomforest.py  5_build_master_dataset.py  6_render_video.py  6a_get_homography.py  6b_visualize_demo.py
site_sentinel/: __init__.py  config.py  logging_utils.py
site_sentinel/data/: parser.py
site_sentinel/features/: engineering.py  targets.py
site_sentinel/vision/: transform.py
src/: about.py  about_page.py  cloud_verify.py  dashboard.py  gcs_utils.py  main_app.py  main_dashboard.py
src/model_training/: feature_eng.py  prepare_lstm_sequence.py  train_lstm.py  train_xgb.py  yolo_finetune.py
src/pipeline/: data_logger.py
tests/: conftest.py  test_features.py  test_model_loading.py  test_parser.py
